language/move-lang/tests/move_check/typing/seq_cannot_ignore_resource.exp
error: 

   ┌── tests/move_check/typing/seq_cannot_ignore_resource.move:2:5 ───
   │
 2 │     resource struct R {}
   │     -------- Is found to be a non-copyable type here
   ·
 5 │         R{};
   │         --- The type: '0x8675309::M::R'
   │         ^^^ Cannot ignore resource values. The value must be used
   │

error: 

    ┌── tests/move_check/typing/seq_cannot_ignore_resource.move:2:5 ───
    │
  2 │     resource struct R {}
    │     -------- Is found to be a non-copyable type here
    ·
  9 │         let r = R{};
    │                 --- The type: '0x8675309::M::R'
 10 │         r;
    │         ^ Cannot ignore resource values. The value must be used
    │

error: 

    ┌── tests/move_check/typing/seq_cannot_ignore_resource.move:2:5 ───
    │
  2 │     resource struct R {}
    │     -------- Is found to be a non-copyable type here
    ·
 14 │         (0, false, R{});
    │         --------------- The type: '(u64, bool, 0x8675309::M::R)'
    │         ^^^^^^^^^^^^^^^ Cannot ignore resource values. The value must be used
    │

error: 

    ┌── tests/move_check/typing/seq_cannot_ignore_resource.move:2:5 ───
    │
  2 │     resource struct R {}
    │     -------- Is found to be a non-copyable type here
    ·
 19 │         if (true) (0, false, R{}) else (0, false, r);
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Cannot ignore resource values. The value must be used
    │                                        ------------- The type: '(u64, bool, 0x8675309::M::R)'
    │

